Added error messages to the signup and login page

--- a/public/style.css
+++ b/public/style.css
@@ -4101,6 +4101,10 @@ html {
   flex-direction: column;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-end {
   justify-content: flex-end;
 }
