Added userName to the posts on the feed.

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -19,7 +19,7 @@
       <p><%= posts[i].caption%></p>
       </div>
       <div class="col-start-3 col-span-1">
-        <h2 class="card-title"> <%= user.userName %></h2>
+        <h2 class="card-title"> <%= posts[i].user.userName %></h2>
         <div class="mb-2"><h5 class="font-bold">Location:</h5> <%= posts[i].location%></div>
         
         <div><h5 class="font-bold">Trail Name:</h5> <%= posts[i].trailName%></div>
