--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -27,12 +27,11 @@
   </div>
     <section class="grid grid-cols-6 card-body gap-0">
       <div col-start-1 col-span-3>
+        <h5 class="font-bold">Rating:</h5>
         <div class="rating rating-mdlg mt-2">
-          <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-          <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-          <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-          <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-          <input type="radio" name="rating-5" class="mask mask-star-2 bg-orange-400" />
+          <% for(var j=0; j<posts[i].rating; j++) {%>
+          <input type="" name="rating-2" class="mask mask-star-2 bg-slate-900" />
+          <%}%>
         </div>
       </div>
       <div class="card-actions justify-end col-start-4">
