--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -63,10 +63,10 @@
       </div>
         <section class="grid grid-cols-6 card-body gap-0">
           <div col-start-1 col-span-3>
-            <%= posts[i].rating%>
+            <h5 class="font-bold">Rating:</h5>
             <div class="rating rating-mdlg mt-2">
               <% for(var j=0; j<posts[i].rating; j++) {%>
-              <input type="" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="" name="rating-2" class="mask mask-star-2 bg-slate-900" />
               <%}%>
             </div>
           </div>
