--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -52,7 +52,7 @@
     <div class="flex justify-end col-start-6">
       <%if(posts[i].user._id == user.id){ %>
         <form
-          action="/profile/deletePost/<%= posts[i].id %>?_method=DELETE"
+          action="/feed/deletePost/<%= posts[i]._id %>?_method=DELETE"
           method="POST"
           class="col-3"
         >
