--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -18,7 +18,8 @@
       <p><%= posts[i].caption%></p>
       </div>
       <div class="col-start-3 col-span-1">
-        <h2 class="card-title"> <%= posts[i].user.userName %></h2>
+        <a href="/profile/<%= posts[i].user._id%>">
+        <h2 class="card-title"> <%= posts[i].user.userName %></h2></a>
         <div class="mb-2"><h5 class="font-bold">Location:</h5> <%= posts[i].location%></div>
         
         <div><h5 class="font-bold">Trail Name:</h5> <%= posts[i].trailName%></div>
