--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,7 @@
       </div>
       <div class="flex-none">
         <ul class="menu menu-horizontal px-1 text-xl">
-          <li><a href="/profile">Profile</a></li>
+          <li><a href="/profile/<%= loggedInUser._id%>">Profile</a></li>
           <li><a href="/feed">Feed</a></li>
           <li><a href="/post" >Post</a></li>
         </ul>
@@ -47,7 +47,7 @@
             <% if (user == undefined) { %>
               <img src="/Images/dog-983014_1920.jpg" />
           <% } else {%>            
-            <img src="<%= user.profilePhoto%>" />
+            <img src="<%= loggedInUser.profilePhoto%>" />
           <% }%>
           </div>
         </label>
