Added a conditional to the feed page so that the users posts show the trashcan but other posts do not show the trash can but move along the grid so it is not obvious the trashcan should be there

--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,10 @@ color: rgb(240, 131, 216);
 background: rgb(15 23 42);
 }
 
+.likesText{
+    color: rgb(240, 131, 216);
+    }
+
 .fa-trash:hover{
     color: gray;
     background: rgb(15 23 42);
