--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -79,11 +79,11 @@
             method="POST"
           >
             <button class="btn fa fa-heart bg-slate-900" type="submit"></button>
-            <h3>Likes: <%= posts[i].likes %></h3>
+            <h3 class="flex justify-center font-bold likesText"><%= posts[i].likes %></h3>
           </form>
         </div>
         <div class ="flex justify-end col-start-5">
-          <button class="btn fa fa-comment bg-slate-900" type="submit"></button>
+         <a href="/post/<%= posts[i]._id%>"><button class="btn fa fa-comment bg-slate-900" type="submit"></button></a>
           <!-- <h3>Comments: <%= posts[i].likes %></h3> -->
           
         </div>
