--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,10 @@
       <div class="max-w-md">
         <h1 class="mb-5 text-8xl font-bold">Trailblazers</h1>
         <h2 class="mb-5 text-3xl font-bold">Helps you connect and share your adventures with other walkers, hikers and climbers</h2>
-        
+        <%if(loggedInUser == undefined){ %>
         <a href="/login"><button class="btn mx-10 btn-grey">Login</button></a>
         <a href="/signup"><button class="btn mx-10 btn-grey">Sign up</button></a>
+        <%}%>
       </div>
     </div>
   </div>
