--- a/views/post.ejs
+++ b/views/post.ejs
@@ -10,11 +10,15 @@
     <div class="py-4">
       <img src="<%= post.image%>" />
     </div>
-    <div class="grid grid-cols-6 flex">
-      <p class="col-start-1 col-span-4"> <%= post.caption %></p>
-      <div class="col-start-5 justify-self-end pr-2"><h4 class="font-bold">Location:</h4> <%= post.location %></div>
-      <div class="col-start-6 justify-self-end pb-2"><h4 class="font-bold">Trail Name:</h4> <%= post.trailName %></div>
-      <div class="col-start-6 flex justify-between "><form
+    <div class="grid grid-cols-12">
+      <p class="col-start-1 col-span-7"> <%= post.caption %></p>
+      <div class="col-start-9 col-span-2"><h4 class="font-bold">Location:</h4> <%= post.location %></div>
+      <div class="col-start-11 col-span-2"><h4 class="font-bold">Trail Name:</h4> <%= post.trailName %></div>
+    </div>
+      <%if(post.user.id == loggedInUser._id){ %>
+        <div class="grid grid-cols-9 flex">
+      <div class="col-start-8 flex justify-end">
+        <form
       class="col-1"
       action="/post/likePost/<%= post.id %>?_method=PUT"
       method="POST"
@@ -22,7 +26,9 @@
         <button class="btn fa fa-heart bg-slate-900" type="submit"></button>
         <h3 class="col-3 flex justify-center font-bold likesText"><%= post.likes %></h3>
     </form>
-    <%if(post.user == user.id){ %>
+
+  </div>
+   <div class="col-start-9 flex justify-end">
     <form
       action="/post/deletePost/<%= post.id %>?_method=DELETE"
       method="POST"
@@ -30,8 +36,20 @@
     >
       <button class="btn fa fa-trash bg-slate-900" type="submit"></button>
     </form>
-    <%}%>
+</div>
+    <% } else {%>   
+      <div class="grid grid-cols-9 flex">
+      <div class="col-start-9 flex justify-end">
+        <form
+      class="col-1"
+      action="/post/likePost/<%= post.id %>?_method=PUT"
+      method="POST"
+    >
+        <button class="btn fa fa-heart bg-slate-900" type="submit"></button>
+        <h3 class="col-3 flex justify-center font-bold likesText"><%= post.likes %></h3>
+    </form>
   </div>
+    <%}%>
     </div>
 
     
@@ -49,7 +67,7 @@
           <a href="/profile/<%= comment[i].user._id%>"><div class="chat-header">
             <%= comment[i].user.userName%>
           </div></a>
-          <div class="chat-bubble bg-slate-900"><%= comment[i].comment%></div>
+          <div class="chat-bubble bg-slate-900"><%= comment[i].comment%> </div>
         </div>
       <% } %>
       <form action="/comment/createComment/<%= post.id%>" method="POST">
