--- a/views/createPost.ejs
+++ b/views/createPost.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 <div class="hero min-h-screen" style="background-image: url(/Images/funes-4984899.jpg);">
   <div class="hero-overlay bg-opacity-20"></div>
-  <div class="text-center text-neutral-content w-1/3">
+  <div class="text-center text-neutral-content">
     <div class="">
       <div class="card flex-shrink-0 shadow-2xl bg-slate-300">
         <div class="card-body">
