--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,12 +12,6 @@
       sizes="32x32"
       href="/imgs/favicon-32x32.png"
     />
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    /> -->
     <link rel="stylesheet" href="/style.css">
     <link
       rel="stylesheet"
@@ -27,15 +21,15 @@
     />
     <script src="https://kit.fontawesome.com/55dffb2fda.js" crossorigin="anonymous"></script>
   </head>
-  <body class="bg-slate-200">
+  <body>
     
     <div class="navbar bg-slate-900 text-white">
       <% if (loggedInUser == undefined) { %>
-      <div class="flex-1">
+      <div class="flex-1 sm:break-inside-auto">
         <a href="/" class="btn btn-ghost normal-case text-4xl">Trailblazers</a>
       </div>
       <% } else {%>  
-        <div class="flex-1">
+        <div class="flex-1 break-after-right">
           <a href="/feed" class="btn btn-ghost normal-case text-4xl">Trailblazers</a>
         </div>
       <% } %>
