--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
   </head>
   <body>
     
-    <div class="navbar bg-slate-900 text-white">
+    <div class=" bg-slate-900 text-white hidden lg:navbar">
       <% if (loggedInUser == undefined) { %>
       <div class="flex-1 sm:break-inside-auto">
         <a href="/" class="btn btn-ghost normal-case text-4xl">Trailblazers</a>
@@ -70,12 +70,44 @@
     </div>
     
 
-    <!-- <header class="container">
-      <div class="text-center">
-        <h1 class=""><a href="/profile">Trailblazers</a></h1>
-        <span>The #100Devs Social Network</span>
+    <div class="navbar bg-slate-900 text-white lg:hidden">
+      <% if (loggedInUser == undefined) { %>
+      <div class="flex-1 sm:break-inside-auto">
+        <a href="/" class="btn btn-ghost normal-case text-4xl">Trailblazers</a>
       </div>
+      <% } else {%>  
+        <div class="flex-1 break-after-right">
+          <a href="/feed" class="btn btn-ghost normal-case text-4xl">Trailblazers</a>
+        </div>
+      <% } %>
+      <div class="flex-none">
+       
+        <div class="dropdown dropdown-end">
+          <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+            <div class="w-10 rounded-full">
+              <% if (user == undefined) { %>
+                <img src="/Images/dog-983014_1920.jpg" />
+            <% } else {%>            
+              <img src="<%= loggedInUser.profilePhoto%>" />
+            <% }%>
+            </div>
+          </label>
+          <% if (loggedInUser != undefined) { %>
+          <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-slate-300 rounded-box w-52 text-slate-900">
+            <li><a href="/feed">Feed</a></li>
+            <li><a href="/profile/<%= loggedInUser._id%>">Profile</a></li>
+            <li><a href="/post">Post</a></li>
+            <li><a href="">Search</a></li>
+            <li><a href="/logout"> Sign out</a></li>
+          </ul>
+        </div>
+        <ul>
+          
+          <% } %>
+        </ul>
+      </div>
+    </div>
 
-    </header> -->
+
   </body>
 </html>
