--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -72,16 +72,16 @@
 
     <div class="navbar bg-slate-900 text-white lg:hidden">
       <% if (loggedInUser == undefined) { %>
-      <div class="flex-1 sm:break-inside-auto">
+      <div class="flex-1">
         <a href="/" class="btn btn-ghost normal-case text-4xl">Trailblazers</a>
       </div>
       <% } else {%>  
-        <div class="flex-1 break-after-right">
+        <div class="flex-1">
           <a href="/feed" class="btn btn-ghost normal-case text-4xl">Trailblazers</a>
         </div>
       <% } %>
       <div class="flex-none">
-       
+        <% if (loggedInUser != undefined) { %>
         <div class="dropdown dropdown-end">
           <label tabindex="0" class="btn btn-ghost btn-circle avatar">
             <div class="w-10 rounded-full">
@@ -92,7 +92,7 @@
             <% }%>
             </div>
           </label>
-          <% if (loggedInUser != undefined) { %>
+         
           <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-slate-300 rounded-box w-52 text-slate-900">
             <li><a href="/feed">Feed</a></li>
             <li><a href="/profile/<%= loggedInUser._id%>">Profile</a></li>
@@ -107,6 +107,7 @@
         </ul>
       </div>
     </div>
+</div>
 
 
   </body>
