--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,16 +1,21 @@
 <!-- Partials folder allows us to input the header and footer into each EJS file which makes the code dryer and more readable. -->
 
 <%- include('partials/header') -%>
-<section class="border border-slate-900 grid grid-cols-3 gap-4 border-black m-4 p-4" >
-      
-  <div class="col-start-1 col-span-2 grid grid-cols-9 py-2">
-    <h2 class="col-start-1 text-2xl">Feed:</h2>
+<section class="border border-slate-900 border-black m-4 p-4 " >
+
+<section class="grid grid-cols-9">
+  <div class="col-start-1 col-span-2 py-2">
+    <h2 class="text-2xl">Feed:</h2>
   </div>
-  <div>
-    <a class="col-start-3 col-span-2 flex justify-end" href="/post"><button class="btn btn-outline mx-4 normal-case text-lg w-2/5">Add Post</button></a>
+
+  <div class="col-start-6 col-span-4 md:col-start-7 md:col-span-3">
+    <a class="flex justify-end" href="/post"><button class="btn btn-outline mx-4 normal-case text-lg lg:w-1/2 w-full">Add Post</button></a>
   </div>
+</section>
+
+<section class=" grid md:grid-cols-2 gap-4 sm:grid-cols-1 lg:grid-cols-3">
   <% for(var i=0; i<posts.length; i++) {%>
-  <div class="card card-compact w-fit bg-slate-100 shadow-xl m-2">
+  <div class="card card-compact w-fit bg-slate-100 shadow-xl m-2 max-w-md mx-auto">
     <figure class="h-72 bg-contain"><a href="/post/<%= posts[i]._id%>"><img src="<%= posts[i].image%>" alt="Shoes" /></a></figure>
     <div class="card-body flex grid grid-cols-3">
       <div class="col-start-1 col-span-2">
@@ -82,8 +87,10 @@
       </div>
     </div>
   </div>
+  
   <% } %>
 </section>
+
   
 </section>
   
