--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,23 +1,23 @@
 <%- include('partials/header') -%>
-<div class="grid grid-cols-9 pt-5">
-  <div class="col-start-2 col-span-5 border-r border-slate-900 pr-6 mb-5">
-  <section class=" bg-slate-300 px-8 py-4 ">
+<div class="grid grid-cols-9 p-5 sm:pt-5">
+  <div class="col-start-1 col-span-9 sm:col-start-2 sm:col-span-5 sm:border-r border-slate-900 sm:pr-6 sm:mb-5">
+  <section class="bg-slate-300 px-8 py-4 ">
   <div class="row justify-content-center">
     <div class="grid grid-cols-6">
-      <h2 class="card-title col-start-1 col-span-4"><%= post.title %></h2>
-      <h2 class="card-title col-start-5 col-span-2 justify-self-end"><a href="/profile/<%= post.user._id%>"><%= post.user.userName %></h2></a>
+      <h2 class="card-title col-start-1 col-span-6 sm:col-span-4 "><%= post.title %></h2>
+      <h2 class="card-title col-start-1 col-span-6 sm:col-start-5 sm:col-span-2 justify-self-end"><a href="/profile/<%= post.user._id%>"><%= post.user.userName %></h2></a>
     </div>
     <div class="py-4">
       <img src="<%= post.image%>" />
     </div>
-    <div class="grid grid-cols-12">
-      <p class="col-start-1 col-span-7"> <%= post.caption %></p>
-      <div class="col-start-9 col-span-2"><h4 class="font-bold">Location:</h4> <%= post.location %></div>
-      <div class="col-start-11 col-span-2"><h4 class="font-bold">Trail Name:</h4> <%= post.trailName %></div>
+    <div class="grid grid-cols-12 flex">
+      <p class="col-start-1 sm:col-span-7 col-span-12"> <%= post.caption %></p>
+      <div class="row start-3 col-start-1 col-span-6 sm:row-start-1 sm:col-start-9 sm:col-span-2 justify-self-start"><h4 class="font-bold">Location:</h4> <%= post.location %></div>
+      <div class="col-start-7 col-span-6 sm:row-start-1 sm:col-start-11 sm:col-span-2 justify-self-end"><h4 class="font-bold">Trail Name:</h4> <%= post.trailName %></div>
     </div>
       <%if(post.user.id == loggedInUser._id){ %>
-        <div class="grid grid-cols-9 flex">
-      <div class="col-start-8 flex justify-end">
+        <div class="grid grid-cols-9 flex mt-4">
+      <div class="sm:col-start-8 flex sm:justify-end justify-self-center col-start-1 col-span-9 gap-4">
         <form
       class="col-1"
       action="/post/likePost/<%= post.id %>?_method=PUT"
@@ -27,8 +27,7 @@
         <h3 class="col-3 flex justify-center font-bold likesText"><%= post.likes %></h3>
     </form>
 
-  </div>
-   <div class="col-start-9 flex justify-end">
+   <div class="sm:col-start-9 sm:justify-end">
     <form
       action="/post/deletePost/<%= post.id %>?_method=DELETE"
       method="POST"
@@ -56,7 +55,7 @@
 </div>  
 </section>
 </div>
-  <div class="col-start-7 col-span-3 col-3 mt-5 p-6">
+  <div class="row-start-2 col-start-1 col-span-9 sm:col-start-7 sm:col-span-3 sm:row-start-1 col-3 mt-5 p-6">
       <% for(var i=0; i<comment.length; i++) {%>
         <div class="chat chat-start">
           <div class="chat-image avatar">
